# pybites

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
1/: README.md  bite.html  git.txt  summing.py  test_summing.py
10/: README.md  git.txt
11/: README.md  git.txt
12/: README.md  git.txt
13/: README.md  git.txt
14/: README.md  git.txt
15/: README.md  git.txt
16/: README.md  git.txt
17/: README.md  git.txt
18/: README.md  git.txt
19/: README.md  git.txt
2/: README.md  git.txt
20/: README.md  git.txt
21/: README.md  git.txt
218/: README.md  git.txt
22/: README.md  git.txt
23/: README.md  git.txt
24/: README.md  git.txt
25/: README.md  git.txt
26/: README.md  git.txt
27/: README.md  git.txt
28/: README.md  git.txt
29/: README.md  git.txt
3/: README.md  git.txt
30/: README.md  git.txt
31/: README.md  git.txt
32/: README.md  git.txt
33/: README.md  git.txt
34/: README.md  git.txt
35/: README.md  git.txt
36/: README.md  git.txt
37/: README.md  git.txt
38/: README.md  git.txt
39/: README.md  bite.html  git.txt
4/: README.md  git.txt
40/: README.md  git.txt
41/: README.md  git.txt
5/: git.txt  names.py
5/.pytest_cache/v/cache/: lastfailed
6/: README.md  git.txt
7/: README.md  git.txt
8/: README.md  git.txt
9/: README.md  git.txt
