[project]
name = "pybites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.4",
    "bcrypt==3.2.0",
    "bs4==0.0.1",
    "cryptography==42.0.4",
    "eatlocal>=0.8.4",
    "faker==13.3.2",
    "fastapi==0.109.1",
    "feedparser==6.0.10",
    "flask==2.3.2",
    "freezegun==1.2.0",
    "gender-guesser==0.4.0",
    "jinja2>=3.0",
    "joblib==1.2.0",
    "markupsafe==2.1.1",
    "more-itertools==8.3.0",
    "nltk==3.6.6",
    "numpy==2.0.1",
    "pandas==2.2.2",
    "passlib==1.7.4",
    "pytest-asyncio==0.20.3",
    "pytest-cov==4.0.0",
    "pytest==7.2.0",
    "python-dateutil>=2.8.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.7",
    "pytz==2020.1",
    "requests==2.32.0",
    "setuptools==70.0.0",
    "sqlmodel==0.0.6",
    "textblob==0.15.3",
    "xlrd==1.2.0",
]
